apps/glance-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-k8s
  namespace: observability
spec:
  selector:
    matchLabels:
      app: glance-k8s
  template:
    metadata:
      labels:
        app: glance-k8s
    spec:
      serviceAccountName: glance-k8s
      containers:
      - name: glance-k8s
        image: ghcr.io/lukasdietrich/glance-k8s/glance-k8s:v0.5.7
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
