apps/glance-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance-k8s-ingress
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
    cert-manager.io/cluster-issuer: mkcert-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - glance-k8s.wst.sh
      secretName: glance-k8s-wst-sh-tls
  rules:
    - host: glance-k8s.wst.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance-k8s
                port:
                  number: 8080
